Terminada la funcionalidad del primer ejercicio

--- a/src/app/components/display-hide/display-hide.component.html
+++ b/src/app/components/display-hide/display-hide.component.html
@@ -1,1 +1,10 @@
 <p>display-hide works!</p>
+
+<button (click)="showHide()">
+    {{ showText }}
+</button>
+
+<div *ngIf="show">
+    Hola mundo
+
+</div>
