--- a/src/app/components/component-communication/component-communication.component.html
+++ b/src/app/components/component-communication/component-communication.component.html
@@ -1,1 +1,22 @@
-<p>component-communication works!</p>
+<h1>Ejercicio Component Communication</h1>
+<hr>
+
+
+<div class="parent">
+
+    <h3>Parent</h3>
+
+    <span class="message">Hola soy el mensaje :D</span>
+
+    <div class="btn-parent">
+        <button class="button" type="button">Use Service</button>
+        <button class="button" type="button">Use Input Property</button>
+        <button class="button" type="button">Use Observable</button>
+    </div>
+    
+
+    <app-child-component></app-child-component>
+
+</div>
+
+
