--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,14 +1,23 @@
 
-<ul>
+<ul class="navUl">
     <li>
-        <a routerLink="displayHide">Display - Hide</a>
+        <a routerLink="displayHide"
+           routerLinkActive="active">   
+           Display - Hide
+        </a>
     </li>
 
     <li>
-        <a routerLink="componentCommunication">Component Communication</a>
+        <a routerLink="componentCommunication"
+           routerLinkActive="active">
+           Component Communication
+        </a>
     </li>
 
     <li>
-        <a routerLink="crud">CRUD</a>
+        <a routerLink="crud"
+           routerLinkActive="active">
+            CRUD
+        </a>
     </li>
 </ul>
