--- a/src/app/components/display-hide/display-hide.component.html
+++ b/src/app/components/display-hide/display-hide.component.html
@@ -1,10 +1,12 @@
-<p>display-hide works!</p>
 
-<button (click)="showHide()">
-    {{ showText }}
-</button>
+<h1>Ejercicio Display - Hide</h1>
 
-<div *ngIf="show">
-    Hola mundo
+<div class="btnHide">
+    <button (click)="showHide()" class="btnText">
+        {{ showText }}
+    </button>
+</div>
 
+<div *ngIf="show" class="showText">
+    <p>¡Hola mundo!</p>
 </div>
