--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+html, body {
+    font-family: Arial, Helvetica, sans-serif;
+    //background-color: #EDE2F5;
+}
+
+body {
+    width: 800px;
+    margin: 0 auto;
+}
