Acabada la primera funcionalidad de los servicios padre e hijo

--- a/src/app/components/component-communication/child-component/child-component.component.html
+++ b/src/app/components/component-communication/child-component/child-component.component.html
@@ -3,11 +3,11 @@
         
     <h3>Child</h3>
 
-    <span class="message">Hola soy el mensaje :D</span>
+    <span class="message">{{ messageScreen | uppercase }}</span>
 
     <div class="btn-child">
-        <button>Use Service</button>
-        <button>Use Input Property</button>
+        <button (click)="sendMsgService()">Use Service</button>
+        <button>Use Output Property</button>
         <button>Use Observable</button>
     </div>
    
