--- a/src/app/components/component-communication/component-communication.component.html
+++ b/src/app/components/component-communication/component-communication.component.html
@@ -6,16 +6,16 @@
 
     <h3>Parent</h3>
 
-    <span class="message">{{ messageOnScreen | uppercase }}</span>
+    <span class="message">message: {{ messageOnScreen | uppercase }}</span>
 
     <div class="btn-parent">
         <button class="button" type="button" (click)="sendMsgService()">Use Service</button>
-        <button class="button" type="button">Use Input Property</button>
-        <button class="button" type="button">Use Observable</button>
+        <button class="button" type="button" (click)="sendMsgInput()">Use Input Property</button>
+        <button class="button" type="button" (click)="sendMsgObservable()">Use Observable</button>
     </div>
     
 
-    <app-child-component></app-child-component>
+    <app-child-component [messagechild]="message" (childMsg)="getChildMsg($event)"></app-child-component>
 
 </div>
 
