--- a/src/app/components/shared/navbar/navbar.component.scss
+++ b/src/app/components/shared/navbar/navbar.component.scss
@@ -7,7 +7,8 @@
     margin: 0;
     padding: 0;
     list-style-type: none;  
-    background-color: #5568E0;
+    background-color: #ED4769;
+    box-shadow: 0px 0px 8px black;
 }
 
 li {
@@ -25,9 +26,11 @@ li a {
 }
 
 li a:hover {
-    background-color: #CA09E6;
+    background-color: #F0C348;
 }
 
 .active {
-    background-color: #CA09E6;
+    background-color: #F0C348;
 }
+
+ 
