Limpieza de code

--- a/src/app/components/crud/crud.component.html
+++ b/src/app/components/crud/crud.component.html
@@ -1,2 +1,13 @@
 <h1>Ejercicio CRUD con Form Reactive</h1>
 <hr>
+
+<div class="formContainer">
+    <app-form></app-form>
+    <app-table></app-table> 
+</div>
+
+
+
+
+
+
