--- a/src/app/components/crud/crud.component.scss
+++ b/src/app/components/crud/crud.component.scss
@@ -2,3 +2,9 @@ h1 {
     margin-top: 110px;
     text-align: center;
 }
+
+.formContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
