--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 html, body {
-    font-family: Arial, Helvetica, sans-serif;
-    //background-color: #EDE2F5;
+    font-family: Roboto, Helvetica, sans-serif;
+    background-color: #303030;
 }
 
 body {
-    width: 800px;
+    width: 950px;
     margin: 0 auto;
+}
+
+app-form {
+    width: 260px;
 }
