Creacion del formulario

--- a/src/app/components/crud/crud.component.scss
+++ b/src/app/components/crud/crud.component.scss
@@ -6,5 +6,12 @@ h1 {
 .formContainer {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+
+    &__form {
+        width: 300px;
+    }
+    &__table {
+        width: 600px;
+
+    }
 }
