--- a/src/app/components/crud/table/table.component.html
+++ b/src/app/components/crud/table/table.component.html
@@ -1,7 +1,5 @@
-
-
-
-    <tr>
+<table class="dataTable">
+    <tr class="tableHeader">
         <th>Nombre de Usuario</th>
         <th>Correo</th>
         <th>Suscrito</th>
@@ -10,4 +8,15 @@
         <th>Acciones</th>
     </tr>
 
+    <tr class="tableBody">
+
+        <td>Soleado</td>
+        <td>Mayormente soleado</td>
+        <td>Parcialmente nublado</td>
+        <td>Ariana</td>
+        <td>Rihanna</td>
+        <td>Borrar, editar</td>
+    
+      </tr>
+</table>
 
