--- a/src/app/components/crud/table/table.component.scss
+++ b/src/app/components/crud/table/table.component.scss
@@ -1,5 +1,20 @@
 
 .dataTable {
 
-    width: auto;
+    margin-left: 65px;
+    width: 800px;
+}
+
+.tableHeader {
+
+    text-align: left;
+    color: white;
+    font-size: 18px;
+    
+}
+
+.tableBody {
+
+    color: white;
+    font-size: 14px;
 }
