Reorganización de código e implementación de Material

--- a/src/app/components/component-communication/component-communication.component.scss
+++ b/src/app/components/component-communication/component-communication.component.scss
@@ -3,8 +3,14 @@ h1 {
     text-align: center;
 }
 
+hr {
+    width: 1175px;
+}
+
 .parent {
-    border: 3px solid #5AABC4;
+    width: 1150px;
+    margin: 0 auto;
+    border: 3px solid #3f51b5;
     padding: 10px;
 }
 
