--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,23 +1,23 @@
 
-<ul class="navUl">
-    <li>
-        <a routerLink="displayHide"
-           routerLinkActive="active">   
-           Display - Hide
-        </a>
-    </li>
+<!--Contenido del sidebar-->
+<div class="example-container" [class.example-is-mobile]="mobileQuery.matches" *ngIf="shouldRun">
+    <mat-toolbar color="primary" class="example-toolbar">
+      <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
+      <h1 class="example-app-name">Ejercicios Angular</h1>
+    </mat-toolbar>
+  
+    <mat-sidenav-container class="example-sidenav-container"
+                           [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+      <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
+                   [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
+        <mat-nav-list>
+          <a mat-list-item [routerLink]="nav.route" *ngFor="let nav of fillerNav">{{nav.name}}</a>
+        </mat-nav-list>
+      </mat-sidenav>
+  
+      <mat-sidenav-content>
+        <router-outlet></router-outlet>
+      </mat-sidenav-content>
+    </mat-sidenav-container>
+  </div>
 
-    <li>
-        <a routerLink="componentCommunication"
-           routerLinkActive="active">
-           Component Communication
-        </a>
-    </li>
-
-    <li>
-        <a routerLink="crud"
-           routerLinkActive="active">
-            CRUD
-        </a>
-    </li>
-</ul>
