Commit de prueba

--- a/src/app/components/crud/form/form.component.html
+++ b/src/app/components/crud/form/form.component.html
@@ -1,9 +1,11 @@
 <!--Contenedor del Formulario-->
 
 
-    <form class="form" [formGroup]="myForm" autocomplete="off">
+    <form (ngSubmit)="create()" [formGroup]="myForm" autocomplete="off" class="form">
 
         <h1>Formulario de Registro</h1>
+
+        <!--Campo del nombre del usuario-->
         <p>
             <mat-hint>Nombre de Usuario</mat-hint> <br>
             <mat-form-field appearance="fill">
@@ -13,8 +15,13 @@
                        formControlName="username" 
                        >
             </mat-form-field>
+
+            <span *ngIf="fieldNoValid('username')">
+                Debe de tener mínimo 3 caracteres
+            </span>
         </p>
 
+        <!--Campo de la contraseña-->
         <p>
             <mat-hint>Contraseña</mat-hint> <br>
             <mat-form-field appearance="fill">
@@ -26,19 +33,31 @@
                 <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                 </button>
             </mat-form-field>
+
+            <span *ngIf="fieldNoValid('password')">
+                Debe de tener 6 caracteres mínimo
+            </span>
         </p>
 
+        <!--Campo para confirmar la contraseña-->
         <p>
             <mat-hint>Repita la contraseña</mat-hint> <br>
             <mat-form-field appearance="fill">
                 <mat-label>Repita la contraseña</mat-label>
-                <input matInput [type]="hide ? 'password' : 'text'" required>
+                <input matInput
+                       formControlName="password2" 
+                       [type]="hide ? 'password' : 'text'" required>
                 <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                 <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                 </button>
             </mat-form-field>
+
+            <span *ngIf="fieldNoValid('password2')">
+                Las contraseñas deben de ser iguales
+            </span>
         </p>
 
+        <!--Campo para el email-->
         <p>
             <mat-hint>Email</mat-hint> <br>
             <mat-form-field appearance="fill">
@@ -48,42 +67,65 @@
                                 required>
                 <!--<mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>-->
             </mat-form-field>
+
+            <span *ngIf="fieldNoValid('email')">
+                Debe de ser un email válido
+            </span>
         </p>
 
+
+        <!--Campo opcional para suscribirse-->
         <p>
-            <mat-checkbox>Enviarme ofertas promocionales</mat-checkbox>
+            <mat-checkbox formControlName="offers"
+            checked="true">Enviarme ofertas promocionales</mat-checkbox>
         </p>
 
+
+        <!--Campo para el desplegable del pais-->
         <p>
             <mat-hint>País</mat-hint> <br>
             <mat-form-field appearance="fill">
                 <mat-label>País</mat-label>
-                    <mat-select required>
-                        <mat-option>-- Pais --</mat-option>
-                        <mat-option value="option">Option</mat-option>
+                    <mat-select formControlName="coutry"
+                        required>
+                        
+                        <mat-option 
+                                    *ngFor="let countries of coutry"
+                                    [value]="countries">
+                                        {{ countries }}          
+                        </mat-option>
                     </mat-select>
+                    
             </mat-form-field>
         </p>
 
+        <!--Campo para introducir la ciudad-->
         <p>
             <mat-hint>Ciudad</mat-hint> <br>
             <mat-form-field appearance="fill">
                 <mat-label>Ciudad</mat-label>
-                    <mat-select required>
-                        <mat-option>-- Ciudad --</mat-option>
-                        <mat-option value="option">Option</mat-option>
-                    </mat-select>
+                <input matInput placeholder="Ciudad"
+                                formControlName="city"
+                                required>
             </mat-form-field>
+
+            <span *ngIf="fieldNoValid('email')">
+                Debe de ser un email válido
+            </span>
         </p>
 
+        <!--Botón para crear/modificar un usuario-->
         <p>
-            <button mat-raised-button color="primary">Crear</button>
+            <button mat-raised-button color="primary"
+                    type="submit"
+                   >Crear</button>
         </p>
         
     </form>
 
     <span>Valid</span>
     <pre>{{ myForm.valid }}</pre>
+    <pre>{{ myForm.errors | json}}</pre>
 
     <span>Pristine</span>
     <pre>{{ myForm.pristine }}</pre>
