--- a/src/app/components/crud/table/table.component.html
+++ b/src/app/components/crud/table/table.component.html
@@ -19,10 +19,10 @@
                 <mat-icon aria-hidden="false" aria-label="Edit">edit</mat-icon>
             </a>
             <a>
-                <mat-icon aria-hidden="false" aria-label="Delete">delete</mat-icon>
+                <mat-icon (click)="eliminateUser(user)" aria-hidden="false" aria-label="Delete">delete</mat-icon>
             </a>
             
         </td>
-    
+
       </tr>
 </table>
