--- a/src/app/components/crud/crud.component.html
+++ b/src/app/components/crud/crud.component.html
@@ -4,7 +4,7 @@
 <div class="formContainer">
     
     <app-form></app-form>
-    <app-table></app-table> 
+    <app-table (modUser)="dataUser($event)"></app-table> 
 </div>
 
 
